# android-qemu

./: .gitignore  README.md  build.sh
android/android-emu/android/: main-common.c
android/android-emu/android/base/: Log.cpp
android/android-emu/android/base/containers/: EntityManager.h
android/android-emu/android/base/memory/: LazyInstance.h
android/android-emu/android/base/system/: System.cpp
android/android-emu/android/emulation/hostdevices/: HostGoldfishPipe.cpp
android/android-emu/android/utils/: debug.h  debug_wrapper.cpp  path.cpp
android/android-emugl/combined/: ClientComposer.cpp  GfxStreamBackend.cpp  GoldfishOpenglTestEnv.cpp  Toplevel.cpp
android/android-emugl/guest/libvulkan/: driver.cpp
android/android-emugl/host/include/OpenGLESDispatch/: DispatchTables.h
android/android-emugl/host/include/OpenglRender/: IOStream.h
android/android-emugl/host/libs/: EmuglInterface.cpp  EmuglInterface.h
android/android-emugl/host/libs/GLESv2_dec/: GLESv2Decoder.cpp  GLESv2Decoder.h  gles2.attrib  gles2.in  gles2_server_context.cpp  gles2_server_context.h  gles2_server_proc.h
android/android-emugl/host/libs/libOpenGLESDispatch/: EGLDispatch.cpp  GLESv2Dispatch.cpp  OpenGLDispatchLoader.cpp  StaticDispatch.cpp
android/android-emugl/host/libs/libOpenglRender/: ColorBuffer.cpp  ColorBuffer.h  FbConfig.cpp  FbConfigMy.cpp  FbMapConfig.cpp  FbMapConfig.h  FrameBuffer.cpp  FrameBuffer.h  GLESVersionDetector.cpp  PostWorker.cpp  PostWorker.h  ReadbackWorker.cpp  RenderContext.cpp  RenderControl.cpp  RenderControl.h  RenderThread.cpp  RenderThreadInfo.cpp  RenderThreadInfo.h  RenderWindow.cpp  RenderWindow.h  SyncThread.cpp  TextureDraw.cpp  TextureDraw.h  TextureResize.cpp  WindowSurface.cpp  WindowSurface.h  YUVConverter.cpp  YuvDraw.h
android/android-emugl/host/libs/libOpenglRender/standalone_common/: ShaderUtils.cpp
android/android-emugl/host/libs/libOpenglRender/vulkan/: VkAndroidNativeBuffer.cpp  VkCommonOperations.cpp  VkDecoder.cpp  VkDecoder.h  VkDecoderGlobalState.cpp  VkDecoderGlobalState.h  VkReconstruction.cpp  VulkanDispatch.cpp  VulkanStream.cpp
android/android-emugl/host/libs/libOpenglRender/vulkan/cereal/common/: goldfish_vk_dispatch.cpp  goldfish_vk_private_defs.h
android/android-emugl/host/libs/renderControl_dec/: renderControl_dec.h  renderControl_server_context.cpp  renderControl_server_context.h  renderControl_server_proc.h
android/android-emugl/host/tools/emugen/cmake/: CMakeLists.txt
android/android-emugl/shared/OpenglCodecCommon/: ErrorLog.h
android/android-emugl/shared/emugl/common/: OpenGLDispatchLoader.h  logging.h
cmake/: CMakeLists.txt
